using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace GameCommonSystem_V5{

    public class FlagData {
        public string FlagName;
        public bool FlagValue;
    }

}
