using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IFlagUpdatable {

    public void SetFlag(string flagId , bool value);

}
